[package]
name = "GeoHarbour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
quick-xml = { version = "0.31.0", features = ["serialize"] }
anyhow = "1.0.75"
async-trait = "0.1.80"
url = "2.5.0"
geojson = "0.24.1"
regex = "1.10.4"
